--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Hydrate</title>
 	</head>
 	<body>
-		<header> 
+		<header>
 			<img src="https://static.pexels.com/photos/67843/splashing-splash-aqua-water-67843.jpeg" alt="water" style="width:500px">
 			<h1>the best of water</h1>
 				<ul>
@@ -21,6 +21,7 @@
 		<hr>
 		<h1>water</h1>
 			<p>water is amazing! we should all be happy about water. we are made of water. if you want to learn more about why water is amazing go here, here, or here </p>
+<p> testing!!!! :) </p> 
 		<h1>sparkle</h1>
 		<h1>flavours</h1>
 		<h2>fruit</h2>
