added comment hopefully to another-test

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<h1>water</h1>
 			<p>water is amazing! we should all be happy about water. we are made of water. if you want to learn more about why water is amazing go here, here, or here </p>
 <p> testing!!!! :) </p> 
+<!-- trying to add a comment -->
 		<h1>sparkle</h1>
 		<h1>flavours</h1>
 		<h2>fruit</h2>
