added another li

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 					<li><a href="#">water</a></li>
 					<li><a href="#">sparkle</a></li>
 					<li><a href="#">flavours</a></li>
+					<li><a href="#">types of drinks</a></li>
 						<ul>
 							<li><a href="#">fruit</a></li>
 							<li><a href="#">veg</a></li>
