--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 		<hr>
 		<h1>water</h1>
 			<p>water is amazing! we should all be happy about water. we are made of water. if you want to learn more about why water is amazing go here, here, or here </p>
-<p> testing!!!! :) </p> 
+<p> testing!!!! :) </p>
+<p> trying something out in a local branch NOT the master</p>
 <!-- here is another comment - hopefully to the testing-branch-function -->
 	<p>testing! can i create a pull request?</p>
 <!-- trying to add a comment -->
